# ai-impact-accounting

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LAB.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: code_checks.yml  crawl.yml  docs.yml.disabled  integration_tests.yml  publish.yml  unit_tests.yml
docs/: index.html  main.js  style.css
scripts/: crawl.py  deploy_space.py  dia_finalize.py  distill_sst2.py  generate_synthetic_state.py  ingest_all.py  ingest_local_cards.py  reset_lab.py  run_doctests.py  run_local.sh  train_bert_demo.py  train_ddpm_mnist.py  train_llama_lora.py  train_qwen_lora.py  train_resnet50_cifar.py  train_simclr_cifar.py  update_cards.py  view_local.py
space/: Dockerfile  README.md  app.py  requirements.txt
src/ai_impact_accounting/: __init__.py  graph.py  models.py  parse.py
src/ai_impact_accounting/dashboard/: __init__.py  api.py  app.py  atlas.py  server.py  theme.py  ui.py
src/ai_impact_accounting/dashboard/static/: app.css  app.js  index.html
src/ai_impact_accounting/hub/: __init__.py  crawl.py  ingest.py  local_store.py  store.py
src/ai_impact_accounting/producer/: __init__.py  cli.py  tracking.py
src/ai_impact_accounting/schema/: __init__.py  dia_schema.json
tests/: test_dia_finalize.py
tests/ai_impact_accounting/: __init__.py  test_api.py  test_atlas.py  test_cli.py  test_graph.py  test_hub_integration.py  test_hub_lookup.py  test_import.py  test_models.py  test_parse.py  test_producer.py  test_store.py  test_synthetic_state.py
tests/fixtures/: synth-100-state.json
