[project]
name = "ai-impact-accounting"
version = "0.1.0"
description = "Data and Impact Accounting (DIA) to track the carbon and water footprint of open-source AI and its derivatives"
readme = "README.md"
authors = [{name = "Vector Institute", email = "ai_engineering@vectorinstitute.ai"}]
license = "Apache-2.0"
repository = "https://github.com/VectorInstitute/ai-impact-accounting"
requires-python = ">=3.12"
dependencies = [
    # --- security hardening pins (transitive) ---
    "filelock==3.29.4",
    "requests>=2.33.0", # Pinning version to address vulnerability CVE-2026-25645
    "urllib3==2.7.0",
    "pygments>=2.20.0", # Pinning version to address vulnerability CVE-2026-4539
    # --- core + producer toolkit ---
    "networkx>=3.0",         # lineage DAG + family rollup
    "jsonschema>=4.0",       # `dia validate` against dia_schema.json
    "pyyaml>=6.0",           # emit/inspect the dia_report YAML block
    "huggingface_hub>=1.2.0,<2.0", # read/write model cards, persist state, crawl derivatives
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "datasets>=5.0.0",
    "transformers>=5.12.1",
    "gradio>=6.19.0",
    "matplotlib>=3.11.0",
    "accelerate>=1.14.0",
    "peft>=0.19.1",
]

[project.optional-dependencies]
# Measured energy/carbon during a training run. Without it, track() still works
# and falls back to a hardware-TDP estimate (labelled estimated-from-hardware).
measure = [
    "codecarbon>=2.3",
    "nvidia-ml-py>=13.610.43",
]
# Self-host the web dashboard + Hugging Face webhook Space.
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "starlette>=0.37",
    "plotly>=6.0",
    "pandas>=3.0.3",
    "huggingface_hub>=1.2.0,<2.0",
]
# Dependencies for the runnable training demos under scripts/.
examples = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.53.0",
    "datasets>=2.18",
    "peft>=0.10",
    "sentencepiece>=0.2",
]
all = ["ai-impact-accounting[measure,dashboard]"]

[project.scripts]
dia = "ai_impact_accounting.producer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_impact_accounting"]

[tool.hatch.build.targets.wheel.force-include]
"src/ai_impact_accounting/dashboard/static" = "ai_impact_accounting/dashboard/static"

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "mypy>=1.20.1",
    "nbqa>=1.9.1",
    "pip>=26.1", # Pinning version to address vulnerabilities CVE-2026-1703, CVE-2026-3219
    "pip-audit>=2.7.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "msgpack>=1.2.1", # Pinning version to address vulnerability GHSA-6v7p-g79w-8964
    "ruff>=0.13.3",
]
docs = [
    "jinja2>=3.1.6", # Pinning version to address vulnerability GHSA-cpwx-vrp4-4pq7
    "pygments>=2.20.0", # Pinning version to address vulnerability CVE-2026-4539
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.15",
    "pymdown-extensions>=10.21.2", # Pinning version to fix pygments 2.20.0 compatibility
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=1.10.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "tornado>=6.5.6", # Pinning version to address vulnerability CVE-2026-49854
]

# Default dependency groups to be installed
[tool.uv]
default-groups = ["dev"]

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = false
install_types = true
pretty = true
non_interactive = true
allow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
allow_subclassing_any = false
allow_untyped_calls = false
allow_incomplete_defs = false
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
strict_equality = true
extra_checks = true
mypy_path = "src"

# Third-party libraries without (complete) type stubs. The DIA logic is fully
# typed; these are external deps we call through.
[[tool.mypy.overrides]]
module = [
    "codecarbon.*",
    "pynvml.*",
    "torch.*",
    "transformers.*",
    "peft.*",
    "datasets.*",
    "gradio.*",
    "matplotlib.*",
    "pandas.*",
    "networkx.*",
    "yaml.*",
    "jsonschema.*",
]
ignore_missing_imports = true

# huggingface_hub ships types but doesn't re-export some utils error classes;
# relax the strict implicit-reexport check just for it.
[[tool.mypy.overrides]]
module = ["huggingface_hub.*"]
ignore_missing_imports = true
implicit_reexport = true

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
# Runnable training demos (heavy torch/transformers); not part of the library.
exclude = ["scripts"]
force-exclude = true
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
    "N", # pep8-naming
    "ERA", # eradicate
    "PL", # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905", # `zip()` without an explicit `strict=` parameter
    "E501", # line too long
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "PLR2004", # Replace magic number with named constant
    "PLR0913", # Too many arguments
    "COM812", # Missing trailing comma
    "ERA001", # Found commented-out code (too many false positives with math comments)
    "A001", # Ignore variable `input` is shadowing a Python builtin (common for torch)
    "A002", # Ignore variable `input` is shadowing a Python builtin in function (common for torch)
    "D301", # r-strings for docstrings with backslashes
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
# Ignoring undocumented public functions, public init, magic method, and magic numbers in tests folder
"tests/*" = ["D103", "D105", "D107"]
# tracking.py lazily imports optional deps (codecarbon, torch, pynvml, yaml,
# huggingface_hub) inside functions on purpose, so the base install stays light.
"**/producer/tracking.py" = ["PLC0415"]


[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

# `setp` is matplotlib's pyplot.setp(), not a typo of "step".
[tool.typos.default.extend-words]
setp = "setp"

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]

[tool.coverage]
    [tool.coverage.run]
    source=["src/ai_impact_accounting"]
    omit=["tests/*", "*__init__.py"]
